fix: dark mode iOS and 2 cols grid

--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,3 @@ body {
   padding: 0;         
   margin: 0;          
 }
-
-body.dark {
-  background-color: var(--color-cairn-dark-bg);
-  color: var(--color-cairn-dark-text);
-}
